--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
 
-<%= yield %>
-
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+	<%= render 'layouts/navbar' %>
+	<%= render 'layouts/header' %>
+	<%= yield %>
 </body>
 </html>
